tests/error/match_errors/unsupported_subject_string.err
Error: Unsupported (at $FILE:6:10)
  | 
4 | @compile_guppy
5 | def main() -> None:
6 |     match "t":
  |           ^^^ Pattern matching on str is not supported

Guppy compilation failed due to 1 previous error
